# RGIOE

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  build_test.sh  build_win32.sh  ci-test-a15.sh  ci-test-pos830.sh  main.c  main.cpp  readme.md  temp.cpp  test_align.cpp  test_dataFusion.cpp  test_ins.cpp  test_kalman.cpp
App/: CMakeLists.txt  Config.cpp  Config.h  DeadReckoning.cpp  FileIO.cpp  FileIO.h  PostDataFusion.cpp  ReadConfig.cpp  ReadConfig.h  drIndoor.cpp  main.c
App/AppCommon/: Config.cpp  Config.h  FileIO.cpp  FileIO.h  NavLog.cpp  NavLog.h  Timer.h
App/DeadReckoning/: DeadReckoning.cpp  ReadConfig.cpp  ReadConfig.h  main.c
App/PostDataFusion/: CMakeLists.txt  DataManager.cpp  DataManager.h  PostDataFusion.cpp  PostDataFusion_old.cpp
App/RtSimulation/devel/: .catkin  .rosinstall  setup.sh
App/RtSimulation/devel/include/navplay/: gnss.h  imu.h  vel.h
App/RtSimulation/devel/lib/pkgconfig/: navplay.pc  rtsim_fusion.pc
App/RtSimulation/devel/lib/python3/dist-packages/navplay/msg/: __init__.py  _gnss.py  _imu.py  _vel.py
App/RtSimulation/devel/lib/rtsim_fusion/: rtsim_fusion_node
App/RtSimulation/devel/share/common-lisp/ros/navplay/msg/: _package.lisp  _package_gnss.lisp  _package_imu.lisp  _package_vel.lisp  gnss.lisp  imu.lisp  navplay-msg.asd  vel.lisp
App/RtSimulation/devel/share/gennodejs/ros/navplay/msg/: _index.js  gnss.js  imu.js  vel.js
App/RtSimulation/devel/share/navplay/cmake/: navplay-msg-paths.cmake  navplayConfig.cmake
App/RtSimulation/devel/share/roseus/ros/navplay/: manifest.l
App/RtSimulation/devel/share/roseus/ros/navplay/msg/: gnss.l  imu.l  vel.l
App/RtSimulation/devel/share/rtsim_fusion/cmake/: rtsim_fusionConfig.cmake
App/RtSimulation/src/navplay/: CMakeLists.txt  package.xml
App/RtSimulation/src/navplay/include/navplay/: AdiHandle.h  Convert.h  HandleBase.h  NavRawReader.h  NavTypeDef.h  RawDecode.h  RawStruct.h  ReaderBase.h  RelativePos.h  WGS84.h  matrix_lib.h
App/RtSimulation/src/navplay/launch/: replay_220106.launch  replay_lps01.launch
App/RtSimulation/src/navplay/msg/: debug.msg  gnss.msg  imu.msg  vel.msg
App/RtSimulation/src/navplay/scipts/: ShowDebugInfo.py
App/RtSimulation/src/navplay/src/: AdiHandle.cpp  HandleBase.cpp  NavRawReader.cpp  RawDecode.cpp  WGS84.cpp  navplay_node.cpp  rtsim_fusion_node.cpp
App/UiDataFusion/: CMakeLists.txt  DataFusionThread.cpp  DataFusionThread.h  DataFusionWindow.ui  datafusionwindow.cpp  datafusionwindow.h  gnssformat.cpp  gnssformat.h  gnssformat.ui  main.cpp  navplot.cpp  navplot.h  navplot.ui  navplot_main.cpp
Doc/: RGIOE 数据格式说明-CN.md  performance.md
Inc/: Alignment.h  Config.h  Convert.h  DataFusion.h  DcmEstimator.h  Define.h  Earth.h  FileIO.h  InsCore.h  KalmanFilter.h  LooselyCouple.h  NavLog.h  NavStruct.h  Outage.h  RgioeConfig.h  RgioeConfig_template.h  RgioeDataType.h  RgioeDefine.h  RgioeMath.h  Singleton.h  Smoother.h  StaticDetect.h  WGS84.h  convert.h  f_io.h  ins_core.h  matrix_lib.h  nav_struct.h  navigation_log.h  rgioe.h  rgioe_data.h  wgs84.h
Src/: Alignment.cpp  Alignment.h  AttiAhrs.cpp  AttiAhrs.h  Config.cpp  Convert.cpp  Convert.h  DataFusion.cpp  DataFusion.h  DcmEstimator.cpp  DcmEstimator.h  Earth.cpp  Earth.h  FileIO.cpp  InsCore.cpp  InsCore.h  KalmanFilter.cpp  KalmanFilter.hpp  LooselyCouple.cpp  LooselyCouple.h  MacroLib.h  NavLog.cpp  Outage.cpp  Outage.h  RgioeDataType.h  RgioeDefine.h  RgioeMath.h  Smoother.h  StaticDetect.cpp  StaticDetect.h  WGS84.cpp  convert.cpp  f_io.cpp  ins_core.cpp  navigation_log.cpp  rgioe.cpp  wgs84.cpp
Src/Recorder/: DataLoader.cpp  DataLoader.h  Recorder.cpp  Recorder.h  RecorderDef.h  RecorderHeaderDef.h  RecorderType.h  comm_crc.c  comm_crc.h  readme.md
Test/: CMakeLists.txt  main.c  readme.md  test_align.cpp  test_dataFusion.cpp  test_ins.cpp  test_kalman.cpp
Tools/: CMakeLists.txt  DataGenerator.cpp  DynamicPlot.cpp  Earth.py  ErrorAnalyse.py  ErrorAnalyser.py  EstimateInstallAngles.cpp  ImuFix.cpp  InsCore.py  ObtainInstallAngle.cpp  SaveNavToBin.cpp  ZeroDetector.cpp  note.md  showTraj.cpp  show_debug.py  show_nav.py  show_sensors.py
yaml/: M39_20201215.yml  adis16460_parameter.yml  adis16465_parameter.yml  configure.yml  configure_adis16460.yml  configure_deadreckoning.yml  configure_icm20602.yml  configure_kyimu102NA0.yml  configure_stim300.yml  cpt_482.yml  cpt_482_0302.yml  cpt_482_04.yml  cpt_parameter.yml  debug.yml  demo.yml  demo_a15.yml  demo_pos830.yml  icm20602.yml  icm20602_parameter.yml  imu_kyimu102Na0_parameter.yml  ins_cube.yml  ins_cube_0302.txt  ins_cube_0302.yml  ins_cube_05.yml  ins_cube_lps_13.yml  ins_cube_lps_16.yml  kyimu102a0.yml  newversion.yml  pure_ins.yml
